--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>iSara[イサラ]バンコクのノマドエンジニア育成講座</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://github.com/Kosukehappy1017/Kosukehappy1017.github.io/edit/master/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
