--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ヘッダー -->
     <header>
         <div class="header">
-            <img src="./images/isaralogo.png">
+            <img src="https://Kosukehappy1017.github.io/Kosukehappy1017.github.io/isaralogo.png">
             <h1>バンコクのノマドエンジニア育成講座</h1>
             <div class="otoiawase">
                 <p>お問い合わせ / 資料請求こちら</p>
